Fixed the Adv. Options aligning.

--- a/size-converter.css
+++ b/size-converter.css
@@ -39,6 +39,9 @@ form div {
 
 label {
 	font-weight: bold;
+}
+
+.align {
 	text-align:right;
 	padding-right:20px;
 	display:inline-block;
